--- a/Update-posters.css
+++ b/Update-posters.css
@@ -32,7 +32,13 @@
     height: 249px;
   }
 }
-.block meta ~ .b-db_entry .c-image .cc .c-poster .b-image, .b-menu_logo a, .image.bubbled-processed, .l-content .b-db_entry > .c-image .cc .c-poster picture img, .menu-slide-outer .menu-slide-inner .l-content .b-db_entry > .c-image .cc .c-poster picture source {
+
+.block meta ~ .b-db_entry .c-image .cc .c-poster .b-image, .b-menu_logo a, .image.bubbled-processed {
+    --show-default:1;
+    --custom-image:none;
+}
+
+.l-content .b-db_entry > .c-image .cc .c-poster picture img, .menu-slide-outer .menu-slide-inner .l-content .b-db_entry > .c-image .cc .c-poster picture source {
     --show-default:1;
     --custom-image:none;
     --display-default-character:initial;
