--- a/Update-posters.css
+++ b/Update-posters.css
@@ -4,8 +4,8 @@
   height: 75px;
   border-radius: 4px;
 }
-/*Замена постеров content'ом*/
-img {
+/*Замена постеров content'ом в истории, на главной странице и при открытии изображения на странице тайтла*/
+.p-profiles .profile-head .c-history .entry img, .b-user_rate-history img, img.mfp-img {
     content: var(--custom-image, "");
 }
 /*Скрываем стандартный постер на странице аниме или манги + на странице редактирования + мелкие постеры*/
@@ -17,7 +17,7 @@ img {
   background: var(--custom-image,none) var(--custom-settings,center top/cover);
 }
 /*Скрываем постер на странице персонажа */
-.menu-slide-outer .menu-slide-inner .l-content .b-db_entry > .c-image .cc .c-poster picture img {
+.menu-slide-outer .menu-slide-inner .l-content .b-db_entry > .c-image .cc .c-poster picture img[src*="characters/"] {
     display: var(--display-default-character, initial);
 }
 /*Изменить постер персонажа */
